fix(TPLA-282): align panel icons

--- a/packages/web/projects/web-components/src/components/structure/panel/panel.component.scss
+++ b/packages/web/projects/web-components/src/components/structure/panel/panel.component.scss
@@ -21,6 +21,9 @@
     background: #eee6fc;
     border-color: #eee6fc;
   }
+  .p-panel-icons {
+    display: flex;
+  }
   .p-panel-icons freud-button .p-button-label {
     display: none;
   }
